--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,14 @@
 @import 'scss/generic/global';
 @import 'scss/generic/layout';
 @import 'scss/generic/typo';
-@import 'scss/sections/header';
-@import 'scss/sections/hero';
-@import 'scss/sections/company-stats';
-@import 'scss/sections/company-profile';
-@import 'scss/sections/video-splash';
-@import 'scss/sections/loft';
-@import 'scss/sections/footer';
+@import 'scss/components/header';
+@import 'scss/components/footer';
 @import 'scss/components/swiper';
 @import 'scss/components/button';
+@import 'scss/pages/home/hero';
+@import 'scss/pages/home/company-stats';
+@import 'scss/pages/home/company-profile';
+@import 'scss/pages/home/video-splash';
+@import 'scss/pages/home/loft';
+@import 'scss/pages/products/products-grid';
 @import 'scss/generic/animations';
