--- a/style.css
+++ b/style.css
@@ -94,6 +94,122 @@ header .nav-link {
   text-decoration: none;
 }
 
+footer {
+  background-color: #f7f7f7;
+  padding: 1.5rem 0 0;
+}
+
+footer .footer__details {
+  padding-left: 2rem;
+}
+
+footer .footer__details-title {
+  color: lightslategrey;
+}
+
+footer .footer__details-phone {
+  font-size: 1.5rem;
+}
+
+footer .footer__details-email {
+  font-weight: 600;
+}
+
+footer .footer__details-payment {
+  margin-top: 2rem;
+}
+
+footer .orr {
+  background-color: #f7f7f7;
+  padding: 1.5rem 0;
+  border-top: 1px solid #c7c5c5;
+}
+
+footer .orr .nav-list {
+  list-style: none;
+  margin-bottom: 0;
+}
+
+footer .orr .nav-items {
+  padding: 0 .5rem;
+}
+
+:root {
+  --swiper-navigation-size: 10px;
+  --swiper-theme-color: aqua;
+}
+
+.swiper-pagination-bullet {
+  width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 16px));
+  height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 16px));
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  padding: 5rem 0 3rem;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 300px;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.swiper-container {
+  position: relative;
+}
+
+.swiper-container .swiper-navigation {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.swiper-container .swiper-navigation-container {
+  position: relative;
+  width: 100px;
+}
+
+.swiper-container .swiper-navigation-container .swiper-button-next,
+.swiper-container .swiper-navigation-container .swiper-button-prev {
+  background-color: #d1d1d1;
+  border-radius: 10px;
+  padding: 1.1rem;
+  color: #000 !important;
+}
+
+.button {
+  display: inline-block;
+  text-decoration: none;
+  padding: 1rem 2.5rem;
+  background-color: black;
+  color: #fff;
+  margin-top: 1rem;
+}
+
+.button:hover {
+  color: #fff;
+}
+
 .hero {
   padding-top: 0;
 }
@@ -236,119 +352,30 @@ header .nav-link {
   border-radius: 20px;
 }
 
-footer {
-  background-color: #f7f7f7;
-  padding: 1.5rem 0 0;
-}
-
-footer .footer__details {
-  padding-left: 2rem;
-}
-
-footer .footer__details-title {
-  color: lightslategrey;
-}
-
-footer .footer__details-phone {
-  font-size: 1.5rem;
-}
-
-footer .footer__details-email {
-  font-weight: 600;
-}
-
-footer .footer__details-payment {
-  margin-top: 2rem;
-}
-
-footer .orr {
-  background-color: #f7f7f7;
-  padding: 1.5rem 0;
-  border-top: 1px solid #c7c5c5;
-}
-
-footer .orr .nav-list {
-  list-style: none;
-  margin-bottom: 0;
-}
-
-footer .orr .nav-items {
-  padding: 0 .5rem;
-}
-
-:root {
-  --swiper-navigation-size: 10px;
-  --swiper-theme-color: aqua;
-}
-
-.swiper-pagination-bullet {
-  width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 16px));
-  height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 16px));
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  padding: 5rem 0 3rem;
-  /* Center slide text vertically */
+.products__grid-sort {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 3rem;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 300px;
-  height: auto;
-  -o-object-fit: cover;
-     object-fit: cover;
+.products__grid-sort select {
+  width: 30%;
 }
 
-.swiper-container {
-  position: relative;
+.products .product__container {
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
-.swiper-container .swiper-navigation {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.swiper-container .swiper-navigation-container {
-  position: relative;
-  width: 100px;
-}
-
-.swiper-container .swiper-navigation-container .swiper-button-next,
-.swiper-container .swiper-navigation-container .swiper-button-prev {
-  background-color: #d1d1d1;
-  border-radius: 10px;
-  padding: 1.1rem;
-  color: #000 !important;
-}
-
-.button {
-  display: inline-block;
-  text-decoration: none;
-  padding: 1rem 2.5rem;
-  background-color: black;
-  color: #fff;
-  margin-top: 1rem;
-}
-
-.button:hover {
-  color: #fff;
+.products .product__image {
+  width: 90%;
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
